# cppChess

./: CMakeLists.txt  Life360test.py  magic.json
